--- a/ItemRental-Android/app/src/main/res/values/strings.xml
+++ b/ItemRental-Android/app/src/main/res/values/strings.xml
@@ -1,22 +1,24 @@
 <resources>
     <string name="app_name">RentX</string>
-    <string name="user">User</string>
+
+    <!-- Login -->
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="confirm_password">Confirm password</string>
+    <string name="button_log_in">Log In</string>
+    <string name="register_message">Don\'t have an account?</string>
+    <string name="welcome_message">Welcome to Item Rental</string>
+
+    <!-- Register -->
     <string name="create_account_message">Create an account:</string>
     <string name="email">E-mail</string>
     <string name="phone_number">Phone Number</string>
-    <string name="button_register">REGISTER</string>
-    <string name="button_cancel">CANCEL</string>
-    <string name="button_log_in">LOG IN</string>
-    <string name="register_message">Don\'t have an account?</string>
-    <string name="welcome_message">Welcome to Item Rental</string>
+    <string name="city">City</string>
+    <string name="street">Street</string>
+    <string name="button_register">Register</string>
+    <string name="button_cancel">Cancel</string>
 
     <!-- Empty Layout -->
     <string name="error_retry">Retry</string>
     <string name="no_results">No results</string>
-    <string name="separator">»</string>
-    <string name="city">City</string>
-    <string name="street">Street</string>
 </resources>
