Implemented full Add Rental Item functionality

--- a/ItemRental-Android/app/src/main/res/values/strings.xml
+++ b/ItemRental-Android/app/src/main/res/values/strings.xml
@@ -39,5 +39,11 @@
     <string name="usage_type">Usage Type</string>
     <string name="description">Item Description</string>
     <string name="price">Price</string>
+    <string name="end_date">Rental End Date</string>
     <string name="add">Add</string>
+    <string name="choose_image_source">Choose an image source</string>
+    <string name="camera">Camera</string>
+    <string name="gallery">Gallery</string>
+    <string name="choose_or_take_photo">You have to choose or take a photo!</string>
+    <string name="incorrect_end_date">End date cannot be before current date!</string>
 </resources>
