--- a/ItemRental-Android/app/src/main/res/values/strings.xml
+++ b/ItemRental-Android/app/src/main/res/values/strings.xml
@@ -38,7 +38,8 @@
     <string name="category">Category : </string>
     <string name="usage_type">Usage Type</string>
     <string name="description">Item Description</string>
-    <string name="price">Price</string>\
+    <string name="price">Price</string>
+    <string name="rental_period">Rental period</string>
     <string name="start_date">Rental Start Date</string>
     <string name="end_date">Rental End Date</string>
     <string name="add">Add</string>
