--- a/ItemRental-Android/app/src/main/res/values/strings.xml
+++ b/ItemRental-Android/app/src/main/res/values/strings.xml
@@ -56,4 +56,9 @@
     <string name="other_items_message">Other items from this user:</string>
     <string name="price_lei">%d Lei</string>
     <string name="no_other_items">This use has no other items available for rent</string>
+    <string name="choose_rent_period">Choose a rental period that does not contain unavailable dates</string>
+    <string name="incorrect_range">Incorrect date range</string>
+    <string name="no_range_selected">No range selected</string>
+    <string name="item_rented_sucessfully">Item rented successfully</string>
+    <string name="item_rented_failed">Failed renting item</string>
 </resources>
